--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/MOVIEPAPA
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=admin
 server.port=8080
