commit controller all

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,26 @@
             <version>0.11.5</version>
         </dependency>
 
+        <!-- GENERADOR DE PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
+
+        <!-- GENERADOR DE QR -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
